@@ -355,7 +355,17 @@ function Invoke-AdapterDoctorText {
     if (-not $outputText) { $outputText = "" }
     $exitCode = [int]$LASTEXITCODE
     $ok = ($exitCode -eq 0)
-    $code = if ($ok) { "OK" } else { "ADAPTER_DOCTOR_FAILED" }
+    $code = "OK"
+    if (-not $ok) {
+      $code = "ADAPTER_DOCTOR_FAILED"
+      $reasonMatch = [System.Text.RegularExpressions.Regex]::Match($outputText, "\[([A-Z0-9_]+)\]")
+      if ($reasonMatch.Success -and $reasonMatch.Groups.Count -gt 1) {
+        $parsedCode = [string]$reasonMatch.Groups[1].Value
+        if ($parsedCode -and $parsedCode.Trim() -ne "") {
+          $code = $parsedCode.Trim()
+        }
+      }
+    }
     return @{
       ok = $ok
       code = $code
